# BTB

./: .gitignore  AGENTS.md  VISION_v1.md  pyproject.toml  tmp_ingest_odds.txt
src/btb/cli/: main.py  phase1_research.py
src/btb/core/: config.py
src/btb/data_sources/: odds_normalize.py  odds_registry.py  odds_the_odds_api.py  props_normalize.py  props_registry.py  stats_normalize.py  stats_registry.py
src/btb/db/: connection.py  schema.py
src/btb/research/: queries_props.py  reports_explain.py
tests/: test_db_schema.py  test_fixture_db_rows.py  test_odds_normalize.py  test_props_fixture_db_rows.py  test_queries_props_edge_signal.py  test_queries_props_recent_form.py  test_reports_explain.py  test_reports_main_markets.py
tests/fixtures/: props_sample.json  stats_sample.json  the_odds_api_sample.json
